--- a/package.json
+++ b/package.json
@@ -1,27 +1,13 @@
 {
-  "name": "account-generator",
-  "version": "1.0.0",
-  "description": "A discord bot you can use to give accounts to your server's members",
+  "name": "Example",
+  "description": "Example",
+  "version": "0.0.0",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/silvanohirtie/account-generator.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/silvanohirtie/account-generator/issues"
-  },
-  "homepage": "https://github.com/silvanohirtie/account-generator#readme",
   "dependencies": {
-    "async": "^3.1.0",
-    "discord.js": "^11.5.1",
-    "express": "^4.17.1",
-    "firstline": "^2.0.2",
-    "line-reader": "^0.4.0"
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
   }
 }
